[project]
name = "arcpie"
version = "0.1.0"
description = "A simplified wrapper library for arcpy that makes it less painful"
readme = "README.md"
requires-python = ">=3.11"

# arcpy is a required dep for now, 
# but is not included here to prevent
# PyPi from failing to build the deps
# since it is not available outside ArcPro
dependencies = [
    "httpx>=0.28.1",
    "networkx>=3.5",
    "numpy>=2.3.2",
]


[tool.ruff]
line-length = 140
src = ["src", "tests"]
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"*/__init__.py" = ["F403"] # Allow * imports for __init__ (Ensure that __all__ is defined in target)

[tool.ruff.lint]
ignore = [
    "RUF001", # ruff-specific rules ambiguous-unicode-character-string
    "S101",   # flake8-bandit assert
    "S308",   # flake8-bandit suspicious-mark-safe-usage
    "S603",   # flake8-bandit subprocess-without-shell-equals-true
    "S607",   # flake8-bandit start-process-with-partial-path
    "E501",   # pycodestyle line-too-long
    "PTH123",
]
select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "E",   # pycodestyle errors
    "EXE", # flake8-executable
    "F",   # pyflakes
    "I",   # isort
    "INT", # flake8-gettext
    "PIE", # flake8-pie
    "PLC", # pylint convention
    "PLE", # pylint errors
    "PT",  # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "RSE", # flake8-raise
    "RUF", # ruff-specific rules
    "S",   # flake8-bandit
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
# force-single-line = true
force-wrap-aliases = true
combine-as-imports = true

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true
indent-style = "space"
